--- a/Semester_1/CPBP/Class Work/Lab 11.ipynb
+++ b/Semester_1/CPBP/Class Work/Lab 11.ipynb
@@ -10,48 +10,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "df204981-ed70-40aa-b7da-2cf3e643d6bf",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2188282031744\n",
-      "Hello \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter your name:  Aarushi\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello Aarushi. Welcome to Python!\n",
-      "2188282126032\n"
-     ]
-    }
-   ],
-   "source": [
-    "# How to append a string after \"Hello\"\n",
-    "str1=\"Hello \"\n",
-    "print(id(str1))\n",
-    "print(str1)\n",
-    "name = input(\"Enter your name: \")\n",
-    "str1 += name\n",
-    "str1 += \". Welcome to Python!\"\n",
-    "print(str1)\n",
-    "print(id(str1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "b76dc464-6975-4e49-996b-3a25a4e58321",
    "metadata": {},
@@ -124,7 +82,7 @@
     "name = \"Arun\"\n",
     "age = 13\n",
     "print(\"name = %s and age = %d\"%(name, age))\n",
-    "print(\"name = %s and age = %d\"%(\"Arun\", 13))\n"
+    "print(\"name = %s and age = %d\"%(\"Arun\", 13))S\n"
    ]
   },
   {
@@ -385,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
