--- a/Semester_1/Adv-DSA/Practical Exam code/ADSA Practical Exam (1).ipynb
+++ b/Semester_1/Adv-DSA/Practical Exam code/ADSA Practical Exam (1).ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "66406362-9484-41ac-b6f8-ce4427ea4e39",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "bcdd780f-2dba-40c6-a5f9-bcce1eee52fe",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "6fdbc1ec-3bb7-4517-9a7c-eecfbf81ddab",
    "metadata": {},
    "outputs": [
@@ -113,8 +113,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d5325e44-00c5-4376-a216-552a33f50680",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peek: 30\n",
+      "Pop: 30\n",
+      "Peek: 20\n",
+      "Is Empty: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.top = None  # Initialize the top of the stack as None\n",
+    "\n",
+    "    def push(self, data):\n",
+    "        new_node = Node(data)\n",
+    "        new_node.next = self.top\n",
+    "        self.top = new_node\n",
+    "\n",
+    "    def pop(self):\n",
+    "        if self.is_empty():\n",
+    "            return \"Stack is empty\"\n",
+    "        popped_data = self.top.data\n",
+    "        self.top = self.top.next\n",
+    "        return popped_data\n",
+    "\n",
+    "    def peek(self):\n",
+    "        if self.is_empty():\n",
+    "            return \"Stack is empty\"\n",
+    "        return self.top.data\n",
+    "\n",
+    "    def is_empty(self):\n",
+    "        return self.top is None\n",
+    "\n",
+    "# Example Usage\n",
+    "stack = Stack()\n",
+    "stack.push(10)\n",
+    "stack.push(20)\n",
+    "stack.push(30)\n",
+    "print(\"Peek:\", stack.peek())  # Output: 30\n",
+    "print(\"Pop:\", stack.pop())    # Output: 30\n",
+    "print(\"Peek:\", stack.peek())  # Output: 20\n",
+    "print(\"Is Empty:\", stack.is_empty())  # Output: False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfb83288-f80f-49a2-aaa2-db25f920f54d",
    "metadata": {},
    "outputs": [],
    "source": []
